added final layout

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "expensify",
+    "name": "Expensify",
     "slug": "expensify",
     "version": "1.0.0",
     "orientation": "portrait",
