--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^5.11.1",
     "tailwindcss": "^3.3.2"
   },
