--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.29.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-calendar-picker": "^7.1.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^5.11.1",
     "tailwindcss": "^3.3.2"
