--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "appwrite": "^13.0.0",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.6.0",
     "moment": "^2.29.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
